# my_own_std

./: .gitignore  CMakeLists.txt  list.cpp  list.h  main.cpp  untitled.pro  vector.cpp  vector.h
applications/client/: CMakeLists.txt  main.cpp
applications/server/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  helpers.h  non_copyable.h
file/: CMakeLists.txt  file.cpp  file.h
list/: CMakeLists.txt  list.cpp  list.h
socket/: CMakeLists.txt  base_socket.cpp  base_socket.h  client_socket.cpp  client_socket.h  constants.h  io_socket.cpp  io_socket.h  server_socket.cpp  server_socket.h
transport/: CMakeLists.txt
transport/include/: constants.h  i_client.h  i_server.h
transport/socket/: CMakeLists.txt  base_socket.cpp  base_socket.h  client_socket.cpp  client_socket.h  io_socket.cpp  io_socket.h  server_socket.cpp  server_socket.h
transport/src/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
vector/: CMakeLists.txt  vector.cpp  vector.h
