cmake_minimum_required(VERSION 3.0)
project(server)

FILE(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
#FILE(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h*)

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES}) #${PROJECT_HEADERS} ${PROJECT_SOURCES})
target_link_libraries(${PROJECT_NAME} transport socket)